Bug 1351072 - [e10s] Clear active document when closing popup of <select>. r=smaug

MozReview-Commit-ID: IaRG67FwIPL